@@ -1,13 +1,18 @@
 Package: lmm
 Version: 1.1
-Date: 2018-02-04
+Date: 2018-06-29
 Title: Linear Mixed Models
 Author: Original by Joseph L. Schafer
-Maintainer: Jing hua Zhao <jinghua.zhao@mrc-epid.cam.ac.uk>
+Maintainer: Jing hua Zhao <jinghuazhao@hotmail.com>
 Depends: R (>= 2.0.0)
 LazyData: Yes
 LazyLoad: Yes
-Description: Some improved procedures for linear mixed models.
+Description: It implements ECME and rapidly converging algorithms as well as
+             Bayesian inference for linear mixed models, 
+             which is described in Schafer, J.L. (1998)
+             "Some improved proedures for linear mixed models".
+             Dept. of Statistics, The Pennsylvania State University.
 License: Unlimited
-URL: http://www.stat.psu.edu/~jls/misoftwa.html
+URL: https://github.com/jinghuazhao/R
 Packaged: 2015-02-10 09:46:33 UTC; jhz22
+
